--- a/src/main/resources/templates/MasterPage.html
+++ b/src/main/resources/templates/MasterPage.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Patients</title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/5.0.0/css/bootstrap.min.css" >
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.1.3/css/bootstrap.min.css" >
     <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/5.0.0/js/bootstrap.min.js"></script>
+    <script src="/webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -16,7 +16,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="#">Patients</a>
+            <a class="nav-link" th:href="@{pat}">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Medecins</a>
@@ -28,7 +28,7 @@
                 Patients
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Ajouter</a>
+                <a class="dropdown-item" th:href="@{formPatient}">Ajouter</a>
                 <a class="dropdown-item" href="#">Chercher</a>
             </div>
         </li>
