--- a/src/main/resources/templates/Patients.html
+++ b/src/main/resources/templates/Patients.html
@@ -22,13 +22,14 @@
                     </form>
                         <table class="table">
                             <tr class="table-info">                                                                                         
-                                <th>ID</th><th>Name</th><th>Date Naissance</th><th>Malade</th>
+                                <th>ID</th><th>Name</th><th>Date Naissance</th><th>Malade</th><th>score</th>
                             </tr>
                             <tr th:each="p:${patients}">                                                                                    
                                 <td th:text="${p.id}"> </td>                                                                                
                                 <td th:text="${p.nom}"> </td>                                                                               
                                 <td th:text="${p.dateNaissance}"> </td>
                                 <td th:text="${p.malade}"> </td>
+                                <td th:text="${p.score}"> </td>
                                 <td><a onclick=" return confirm('Etes vous sur de vouloir supprimer ?')"                                    
                                        class="btn btn-danger" th:href="@{deletePatient(id=${p.id})}">Delete</a></td>                        
                             </tr>                                                                                                           
