--- a/src/main/resources/templates/MasterPage.html
+++ b/src/main/resources/templates/MasterPage.html
@@ -12,7 +12,7 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">Patients</a>
+    <h2 class="navbar-brand">Patients</h2>
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -29,7 +29,6 @@
             </a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" th:href="@{formPatient}">Ajouter</a>
-                <a class="dropdown-item" href="#">Chercher</a>
             </div>
         </li>
         </ul>
