--- a/src/main/resources/templates/MasterPage.html
+++ b/src/main/resources/templates/MasterPage.html
@@ -39,9 +39,8 @@
                 [UserName]
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item glyphicon " href="#">Sign Up</a>
-                <a class="dropdown-item " href="#">Login</a>
-                <a class="dropdown-item" href="#">Profile</a>
+                <a class="dropdown-item glyphicon " href="#">Profile</a>
+                <a class="dropdown-item " href="#">Log Out</a>
             </div>
         </li>
     </ul>
