--- a/src/main/resources/templates/MasterPage.html
+++ b/src/main/resources/templates/MasterPage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Patients</title>
@@ -36,11 +37,12 @@
     <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                [UserName]
+                <span sec:authentication="name"></span>
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item glyphicon " href="#">Profile</a>
-                <a class="dropdown-item " href="#">Log Out</a>
+                <a class="dropdown-item glyphicon " th:href="@{/logout}">Log Out</a>
+                <a class="dropdown-item " th:href="@{/login}">Login</a>
+                <a class="dropdown-item" href="#">Profile</a>
             </div>
         </li>
     </ul>
